add Dockerfile and another mock api
