# backend/models.go
@@ -1,7 +1,7 @@
 package main
 
-// CountyCard is the simple version of county information
-type CountyCard struct {
+// PartyCard is the simple version of party information
+type PartyCard struct {
 	ID     string `json:"id"`
 	Name   string `json:"name"`
 	Emblem string `json:"emblem"`
@@ -9,11 +9,11 @@ type CountyCard struct {
 
 // CandidateCard is the simple version of candidate information
 type CandidateCard struct {
-	ID         string     `json:"id"`
-	Name       string     `json:"name"`
-	Photo      string     `json:"photo"`
-	County     CountyCard `json:"county"`
-	Experience string     `json:"experience"`
+	ID         string    `json:"id"`
+	Name       string    `json:"name"`
+	Photo      string    `json:"photo"`
+	Party      PartyCard `json:"county"`
+	Experience string    `json:"experience"`
 }
 
 // CandidateCards is array of CandidateCard
@@ -21,25 +21,13 @@ type CandidateCards []CandidateCard
 
 // Candidate is this candidate's profile
 type Candidate struct {
-	ID                    string     `json:"id"`
-	Name                  string     `json:"name"`
-	Photo                 string     `json:"photo"`
-	County                CountyCard `json:"county"`
-	Age                   int        `json:"age"`
-	BornIn                string     `json:"bornIn"`
-	EducationalBackground []string   `json:"educationalBackground"`
-	Experiences           []string   `json:"experiences"`
-	Politics              string     `json:"politics"`
+	ID                    string    `json:"id"`
+	Name                  string    `json:"name"`
+	Photo                 string    `json:"photo"`
+	Party                 PartyCard `json:"county"`
+	Age                   int       `json:"age"`
+	BornIn                string    `json:"bornIn"`
+	EducationalBackground []string  `json:"educationalBackground"`
+	Experiences           []string  `json:"experiences"`
+	Politics              string    `json:"politics"`
 }
-
-/*
-package main
-
-type Legislator struct {
-	Name string `json:"name"`
-	Age  int    `json:"age"`:w
-
-}
-
-type Legislators []Legislator
-*/
